Closed Bug 1462903 Opened 6 years ago Closed 6 years ago

Intermittent thread 'WRRenderBackend#3' panicked at 'assertion failed: info.ignore_missing_pipeline', gfx/webrender/src/display_list_flattener.rs:559:17

Categories

(Core :: Graphics: WebRender, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla62
Tracking Status
firefox62 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: kats)

References

Details

(Keywords: intermittent-failure)

Attachments

(1 file)

Filed by: ncsoregi [at] mozilla.com

https://treeherder.mozilla.org/logviewer.html#?job_id=179314639&repo=mozilla-inbound

https://queue.taskcluster.net/v1/task/KL5hkkqzRjq2LYNvyyaWGA/runs/0/artifacts/public/logs/live_backing.log

https://hg.mozilla.org/mozilla-central/raw-file/tip/layout/tools/reftest/reftest-analyzer.xhtml#logurl=https://queue.taskcluster.net/v1/task/KL5hkkqzRjq2LYNvyyaWGA/runs/0/artifacts/public/logs/live_backing.log&only_show_unexpected=1

[task 2018-05-19T10:56:21.911Z] 10:56:21     INFO - REFTEST TEST-START | file:///builds/worker/workspace/build/tests/reftest/tests/dom/media/test/crashtests/1270303.html
[task 2018-05-19T10:56:21.913Z] 10:56:21     INFO - REFTEST TEST-LOAD | file:///builds/worker/workspace/build/tests/reftest/tests/dom/media/test/crashtests/1270303.html | 595 / 3558 (16%)
[task 2018-05-19T10:56:21.939Z] 10:56:21     INFO - ++DOMWINDOW == 31 (0x7f84e91c8c00) [pid = 1053] [serial = 3079] [outer = 0x7f850d698000]
[task 2018-05-19T10:56:21.965Z] 10:56:21    ERROR - thread 'WRRenderBackend#3' panicked at 'assertion failed: info.ignore_missing_pipeline', gfx/webrender/src/display_list_flattener.rs:559:17
[task 2018-05-19T10:56:21.967Z] 10:56:21     INFO - stack backtrace:
[task 2018-05-19T10:56:21.996Z] 10:56:21     INFO - [Child 1053, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80004005: file /builds/worker/workspace/build/src/dom/base/nsContentUtils.cpp, line 4061
[task 2018-05-19T10:56:22.021Z] 10:56:22     INFO - REFTEST TEST-PASS | file:///builds/worker/workspace/build/tests/reftest/tests/dom/media/test/crashtests/1270303.html | (LOAD ONLY)
[task 2018-05-19T10:56:22.021Z] 10:56:22     INFO - REFTEST TEST-END | file:///builds/worker/workspace/build/tests/reftest/tests/dom/media/test/crashtests/1270303.html
Component: Audio/Video: Playback → Graphics: WebRender
This is a regression from my changes. I'll investigate.
Assignee: nobody → bugmail
From a code inspection I didn't really see any reason this should be happening except maybe during shutdown scenarios. I also couldn't reproduce it locally, although it seems like it's not isolated to any one test but is just happening randomly.

Try push with some logging to try and narrow it down: https://treeherder.mozilla.org/#/jobs?repo=try&revision=ddfad401f1c8924dba396397552b852e910a0190
https://treeherder.mozilla.org/logviewer.html#?job_id=179883667&repo=try&lineNumber=11226 shows that we're adding a new pipeline but updateDisplayList is coming out false at [1] in the transaction that it's added, so then we don't push a display list for it. Another try push is at [2] with more logging to drill down into why updateDisplayList is coming out false. But a reasonable fix might be to create a display list anyway the very first time, so that WR doesn't have to worry about the missing pipeline content.

[1] https://searchfox.org/mozilla-central/rev/eb51d734a8c06ac5973291be9bcc74ed4e999bca/gfx/layers/wr/AsyncImagePipelineManager.cpp#286
[2] https://treeherder.mozilla.org/#/jobs?repo=try&revision=941411af8461ea07f41e6867fcc2375c87f07219
https://treeherder.mozilla.org/logviewer.html#?job_id=179940808&repo=try&lineNumber=18175

Looks like the pipeline's mCurrentTexture is null, so we don't set the display list for the pipeline.
Comment on attachment 8980358 [details]
Bug 1462903 - Always send a display list for a new async image pipeline so WR doesn't complain.

https://reviewboard.mozilla.org/r/246532/#review252762

Looks good!
Attachment #8980358 - Flags: review?(sotaro.ikeda.g) → review+
Pushed by kgupta@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/8d9da33b8e4f
Always send a display list for a new async image pipeline so WR doesn't complain. r=sotaro
https://hg.mozilla.org/mozilla-central/rev/8d9da33b8e4f
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla62
Whiteboard: [stockwell needswork:owner] → [stockwell fixed:product]
This is still happening.

Recent log: https://treeherder.mozilla.org/logviewer.html#?job_id=182131803&repo=mozilla-inbound&lineNumber=10973

[task 2018-06-06T18:20:28.841Z] 18:20:28     INFO - TEST-START | /webvtt/rendering/cues-with-video/processing-model/selectors/cue/text-decoration_line-through.html
[task 2018-06-06T18:20:28.842Z] 18:20:28     INFO - PID 10995 | 1528309228835	Marionette	INFO	Testing http://web-platform.test:8000/webvtt/rendering/cues-with-video/processing-model/selectors/cue/text-decoration_line-through.html == http://web-platform.test:8000/webvtt/rendering/cues-with-video/processing-model/selectors/cue/text-decoration_line-through-ref.html
[task 2018-06-06T18:20:28.943Z] 18:20:28     INFO - PID 10995 | 1528309228938	Marionette	INFO	Found 42190 pixels different, maximum difference per channel 2
[task 2018-06-06T18:20:28.989Z] 18:20:28     INFO - TEST-UNEXPECTED-FAIL | /webvtt/rendering/cues-with-video/processing-model/selectors/cue/text-decoration_line-through.html | Testing http://web-platform.test:8000/webvtt/rendering/cues-with-video/processing-model/selectors/cue/text-decoration_line-through.html == http://web-platform.test:8000/webvtt/rendering/cues-with-video/processing-model/selectors/cue/text-decoration_line-through-ref.html


[task 2018-06-06T18:20:28.994Z] 18:20:28     INFO - TEST-INFO took 145ms
[task 2018-06-06T18:20:29.042Z] 18:20:29     INFO - PID 10995 | 1528309229037	Marionette	INFO	Stopped listening on port 2828
[task 2018-06-06T18:20:29.502Z] 18:20:29     INFO - Browser exited with return code 0
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Whiteboard: [stockwell fixed:product]
I'll file a new bug for this. It gets really confusing when bugs with patches landed are reopened without the patches getting backed out.
Status: REOPENED → RESOLVED
Closed: 6 years ago6 years ago
Resolution: --- → FIXED
Actually, the log you linked to in comment 26 doesn't have the assertion in the title ("assertion failed: info.ignore_missing_pipeline") anywhere in the log. Are you sure you have the right link/bug?
Flags: needinfo?(btara)
Oh, I see. It matches bug 1438418 which was duped to this bug. But the root cause in the new failure looks different. I'll file a new bug for it.
Flags: needinfo?(btara)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: