Bug 1462903 - Always send a display list for a new async image pipeline so WR doesn't complain. r=sotaro

MozReview-Commit-ID: IXM8EhkcdjE

--HG--
extra : rebase_source : 171e399dd506b65261f7bc8296e9bc806152eef1